# audio_engine

./: .gitignore  CMakeLists.txt  readme.md
include/audio/: a_asset_manager_holder.h  decoder.h  device.h  engine.h
include/concurrent/: lockfree_set.h  spinlock.h
include/maw/: a_asset_manager_holder.h  a_asset_vfs.h  audio.h  blocking_queue.h  controller.h  decoder.h  device.h  engine.h  maw.h  player.h  waiting_queue.h
src/: CMakeLists.txt
src/audio/: decoder.cpp  decoder_android.cpp  device.cpp  engine.cpp
src/maw/: a_asset_vfs.cpp  audio.cpp  controller.cpp  decoder.cpp  decoder_android.cpp  device.cpp  engine.cpp  engine.mm  maw.cpp  maw.mm  player.cpp
tests/: CMakeLists.txt  test_multiple.cpp
tests/android/: .gitignore  CMakeLists.txt  settings.gradle
tests/android/app/: build.gradle
tests/android/app/src/main/: AndroidManifest.xml
tests/android/app/src/main/cpp/: a_audio_test.cpp  a_audio_test.h  log_buffer.cpp  log_buffer.h  main.cpp  miniaudio_async_test.cpp  miniaudio_async_test.h  miniaudio_test.cpp  miniaudio_test.h
tests/android/app/src/main/java/com/github/ondesly/audio_engine/test/: MainActivity.java
tests/android/app/src/main/java/com/github/ondesly/maw/test/: MainActivity.java
tests/android/app/src/main/res/layout/: activity_main.xml
tests/android/app/src/main/res/values/: themes.xml
tests/android/app/src/main/res/values-night/: themes.xml
tests/android/gradle/wrapper/: gradle-wrapper.properties
tests/cmake/modules/: DefaultProperties.cmake  Dependencies.cmake  PlatformDefinitions.cmake
tests/desktop/: CMakeLists.txt  test_multiple.cpp  test_player.cpp  test_preload_release.cpp  test_simple.cpp  test_volume.cpp
tests/ios/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  Info.plist  Main.storyboard  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  main.m
tests/other/: CMakeLists.txt  test_audio.cpp  test_controller.cpp  test_multiple.cpp  test_player.cpp  test_simple.cpp
tests/scripts/: generate ios project.command
